0.10.0 - 2015-02-16
--------------------------------------------------------------------

  Breaking changes


0.9.0 - 2015-02-11
--------------------------------------------------------------------

  Breaking changes

    * Dispatch functions are now of type
      'func([][]byte) ([]byte error)'
      Formerly the argument was '[]string'.


0.8.0 - 2015-02-10
--------------------------------------------------------------------

  Breaking changes

    * Constructors now take a configuration struct rather than a long
      list of parameters

    * Unix socket names are no longer semiautomagic; sockets are now
      created exactly where Config.sockname says.
      

0.7.0 - 2015-01-23
--------------------------------------------------------------------

  Breaking changes

    * Package name change!

    * New() is now NewUnix()

  Additions and other changes

    * Added TCP support - NewTCP()


0.6.0 - 2015-01-17
--------------------------------------------------------------------

  Breaking changes

    * New() now has a 4th argument, messaging level, which controls
      which messages will be sent to a.Msgr

  Additions and other changes

    * Msg type is now far more robust, enabling better
      logging. Concommitantly, Msg.Txt is now generally more terse,
      since more information is elsewhere

    * All Msgs now have a numeric Code field, which accurately
      identifies what sort of message it is

    * A Msg is now generated when a response is sent to a client

    * Improved test coverage

  Bugfixes

    * A response is no longer sent when the request generates an error

    * Connection closures due to timeout now generate a Msg indicating
      server-side closure instead of client-side closure


0.5.1 - 2015-01-10
--------------------------------------------------------------------

    * Changes to match new qsplit API


0.5.0 - 2015-01-05
--------------------------------------------------------------------

  Breaking changes
